--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@mdi/font": "^4.9.95",
     "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
+    "datatables.net-bs4": "^1.10.20",
+    "element-ui": "^2.13.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
     "popper.js": "^1.15.0",
@@ -34,6 +37,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.4",
     "babel-eslint": "^10.0.1",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
