--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sweetalert2": "^8.10.0",
     "vform": "^1.0.0",
     "vue": "^2.6.10",
+    "vue-axios": "^3.2.4",
     "vue-i18n": "^8.11.2",
     "vue-meta": "^1.6.0",
     "vue-router": "^3.0.6",
